[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signadapt"
version = "1.0.0"
description = "OpenEnv adaptive sign-language tutoring environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
