[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signadapt"
version = "2.0.0"
description = "OpenEnv adaptive sign-language tutoring environment with PyTorch learner simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"openenv-core>=0.2.0",
	"torch>=2.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["app*", "server*"]
